gccida/c1/gen_formal_types_die
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_formal_types_die/src/dwarf2out.c:10519:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_formal_types_die/src/dwarf2out.c:10537:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( __int64)v5[2]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_formal_types_die/src/dwarf2out.c:10560:19: error: expected expression
v9 = ( tree_node *)i[4]; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_formal_types_die/src/dwarf2out.c:10560:8: error: use of undeclared identifier 'tree_node'
v9 = ( tree_node *)i[4]; 
       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_formal_types_die/src/obj/dwarf2out.o] Error 1
